fixed header on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -192,7 +192,7 @@ header.nav.hide-header {
         justify-content: flex-start;
         align-items: center;
         gap: 30px;
-        padding-top: 150px;
+        padding-top: 300px;
         opacity: 0;
         pointer-events: none;
         transform: translateY(-10px);
@@ -210,6 +210,8 @@ header.nav.hide-header {
     }
 
     .brand img.logo-img {
+        margin-left: -150px;
+        margin-bottom: 10px;
         height: 110px;
         bottom: -60px;
     }
@@ -287,7 +289,7 @@ header.nav.hide-header {
 
     .hero-title {
         font-size: 1.75rem;
-        margin-top: 40px;
+        margin-top: 0px;
         font-weight: 600;
     }
 
